tests/spec/emit/snapshots/else_if_condition_setup_emitted_in_else_scope.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn track(flag: mut Ref<bool>) -> Result<int, error> {
    flag.* = true
    Ok(1)
  }
  
  fn test() {
    let mut ran = false
    if true {
      let _ = 1
    } else if track(&ran).is_ok() {
      let _ = 2
    } else {
      let _ = 3
    }
  }
---
package main

func track(flag *bool) (int, error) {
	*flag = true
	return 1, nil
}

func test() {
	ran := false
	if true {
	} else if _, err := track(&ran); err == nil {
	}
}
