tests/spec/emit/snapshots/embedded_alias_to_ref_display_gets_shadow.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[display]
  struct Logger { pub prefix: string }
  
  type P = Ref<Logger>
  
  struct Server {
    embed P,
    pub port: int,
  }
---
package main

import "fmt"

type Logger struct {
	Prefix string
}

func (l Logger) String() string {
	return fmt.Sprintf("Logger { prefix: %v }", l.Prefix)
}

func (l Logger) toString() string {
	return l.String()
}

type P = *Logger

type Server struct {
	P
	Port int
}

func (s Server) String() string {
	return fmt.Sprintf("{%v %v}", s.P, s.Port)
}
