tests/spec/emit/snapshots/embedded_display_shadow_is_transitive.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[display]
  struct Logger { pub prefix: string }
  
  struct Server {
    embed Logger,
    pub port: int,
  }
  
  struct Cluster {
    embed Server,
    pub name: string,
  }
---
package main

import "fmt"

type Logger struct {
	Prefix string
}

func (l Logger) String() string {
	return fmt.Sprintf("Logger { prefix: %v }", l.Prefix)
}

func (l Logger) toString() string {
	return l.String()
}

type Server struct {
	Logger
	Port int
}

func (s Server) String() string {
	return fmt.Sprintf("{%v %v}", s.Logger, s.Port)
}

type Cluster struct {
	Server
	Name string
}

func (c Cluster) String() string {
	return fmt.Sprintf("{%v %v}", c.Server, c.Name)
}
