tests/spec/emit/snapshots/embedded_display_with_user_stringer_promotes_without_shadow.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[display]
  struct Logger { pub prefix: string }
  
  impl Logger {
    fn string(self) -> string {
      "custom"
    }
  }
  
  struct Server {
    embed Logger,
    pub port: int,
  }
---
package main

import "fmt"

type Logger struct {
	Prefix string
}

func (l Logger) GoString() string {
	return fmt.Sprintf("Logger { prefix: %v }", l.Prefix)
}

func (l Logger) toString() string {
	return l.String()
}

func (l Logger) String() string {
	return "custom"
}

type Server struct {
	Logger
	Port int
}
