tests/spec/emit/snapshots/embedded_generic_interface_stringer_and_display_are_ambiguous_no_shadow.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[display]
  struct D { pub x: int }
  
  interface Base<T> {
    fn string() -> T
  }
  
  struct C {
    embed D,
    embed Base<string>,
    pub n: int,
  }
---
package main

import "fmt"

type D struct {
	X int
}

func (d D) String() string {
	return fmt.Sprintf("D { x: %v }", d.X)
}

func (d D) toString() string {
	return d.String()
}

type Base[T any] interface {
	String() T
}

type C struct {
	D
	Base[string]
	N int
}
